<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#75DA8B"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/choosePhoto"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:text="@string/choosePhoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/choosePhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:text="@string/takePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosePhoto" />

    <Button
        android:id="@+id/getInfo"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/takePhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:text="@string/getInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePhoto"
        app:layout_constraintVertical_bias="0.096" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/getInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getInfo" />

    <!--<TextView-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Clicked Photo"-->
        <!--android:textSize="30sp"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/photo"-->
        <!--app:layout_constraintEnd_toEndOf="@+id/photo"-->
        <!--app:layout_constraintStart_toStartOf="@+id/photo"-->
        <!--app:layout_constraintTop_toTopOf="@+id/photo" />-->
</androidx.constraintlayout.widget.ConstraintLayout>